fixed bag on mobile screen

--- a/main.scss
+++ b/main.scss
@@ -189,7 +189,7 @@
     }
   }
 
-  @media all and (max-width: 375px) {
+  @media all and (max-width: 380px) {
    body{
     main {
       height: 540px;
